--- a/04-halstead-complexity/04-halstead-complexity.tex
+++ b/04-halstead-complexity/04-halstead-complexity.tex
@@ -94,7 +94,7 @@
 
 \qte
   [Bill Curtis]
-  {{bill-curtis.jpg}
+  {bill-curtis.jpg}
   {In studying some error data provided us by Rome Air Development Center, Phil Milliman and I found Halstead's metric a remarkably accurate predictor of delivered bugs in a system developed with modern programming practices and tools}
   {curtis1979}
 
