--- a/main.bib
+++ b/main.bib
@@ -1150,8 +1150,10 @@
   publisher={ACM New York, NY, USA}
 }
 
-@article{curtis1979,
+@inproceedings{curtis1979,
+  title = {{Program Complexity and Software Errors: A Front End for Reliability}},
   author = {Curtis, Bill},
-  title = {Program Complexity and Software Errors: A Front End for Reliability},
+  booktitle={Proceedings from the Fourth Summer Software Engineering Workshop},
+  pages={217--238},
   year = {1979}
 }
