--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -29,11 +29,23 @@
 
 \plush{\pptPic{.6}{wtfs.png}}
 
-\pitch{\pptQuote{fred-brooks.jpg}{The total \ul{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}{Fred Brooks, \textit{The Mythical Man-Month: Essays on Software Engineering}, 1982}}
+\qte
+  [Fred Brooks]
+  {fred-brooks.jpg}
+  {The total \ul{cost of maintaining} a widely used program is typically 40 percent or more of the cost of developing it}
+  {brooks1982}
 
-\pitch{\pptQuote{ward-cunningham.jpg}{Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}{Ward Cunningham, \textit{Experience Report --- The WyCash portfolio management system}, OOPSLA, 1992}}
+\qte
+  [Ward Cunningham]
+  {ward-cunningham.jpg}
+  {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as interest on that debt.}
+  {cunningham1992}
 
-\pitch{\pptQuote{anonymous-2.png}{Before developers can claim that they are building maintainable systems, there must be some way to \ul{measure} maintainability}{Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \ul{Paul Oman} (University of Idaho), \textit{Using Metrics to Evaluate Software System Maintainability}, 1994}}
+\qte
+  [Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \ul{Paul Oman} (University of Idaho)]
+  {anonymous-2.png}
+  {Before developers can claim that they are building maintainable systems, there must be some way to \ul{measure} maintainability}
+  {coleman1994}
 
 \qte
   {paper-1.png}
@@ -55,7 +67,11 @@
 \end{multicols}
 }
 
-\pitch{\pptQuote{paper-2.png}{A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system}{Don Coleman, Dan Ash, Bruce Lowther, Paul Oman, \textit{Using Metrics to Evaluate Software System Maintainability}, 1994}}
+\qte
+  [Don Coleman, Dan Ash, Bruce Lowther, Paul Oman]
+  {paper-2.png}
+  {A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system}
+  {coleman1994}
 
 \plush{
 \pptBanner{First Approximation}
@@ -90,19 +106,35 @@
 \end{multicols}
 }
 
-\pitch{\pptQuote{rainer-niedermayr.jpg}{We are convinced that Maintainability Index is \ul{nonsense}. We think that it is not sensible to reduce the maintainability of a whole software system to one single indicator.}{Rainer Niedermayr, \textit{Why we don’t use the Software Maintainability Index}, 2016, \href{https://www.cqse.eu/de/news/blog/maintainability-index/}{link}}}
+\qte
+  [Rainer Niedermayr]
+  {rainer-niedermayr.jpg}
+  {We are convinced that Maintainability Index is \ul{nonsense}. We think that it is not sensible to reduce the maintainability of a whole software system to one single indicator.}
+  {niedermayr2016}
 
 \plush{\pptThought{``The Maintainability Index does not provide information about the impact on development activities. A value of 57 does not express which maintainability aspects are affected by a bad value.'' --- Rainer Niedermayr}}
 
-\pitch{\pptQuote{arie-van-deursen.jpg}{If you are a researcher, \ul{think twice} before using the maintainability index in your experiments. Make sure you study and fully understand the original papers published about it.}{Arie van Deursen, \textit{Think Twice Before Using the ``Maintainability Index''}, 2014, \href{https://avandeursen.com/2014/08/29/think-twice-before-using-the-maintainability-index/}{link}}}
+\qte
+  [Arie van Deursen]
+  {arie-van-deursen.jpg}
+  {If you are a researcher, \ul{think twice} before using the maintainability index in your experiments. Make sure you study and fully understand the original papers published about it.}
+  {deursen2014}
 
 \plush{\pptThought{``Tool smiths and vendors used the exact same formula and coefficients as the 1994 experiments, without any recalibration.'' --- Arie van Deursen}}
 
-\pitch{\pptQuote{tim-gilboy.jpg}{If we're going to use the Maintainability Index we should use it to measure \ul{relative} maintainability within our project rather than use it as an \ul{absolute} metric.}{Tim Gilboy, \textit{Maintainability Index - What is it and where does it fall short?}, 2022, \href{https://sourcery.ai/blog/maintainability-index/}{link}}}
+\qte
+  [Tim Gilboy]
+  {tim-gilboy.jpg}
+  {If we're going to use the Maintainability Index we should use it to measure \ul{relative} maintainability within our project rather than use it as an \ul{absolute} metric.}
+  {gilboy2022}
 
 \plush{\pptThought{\raggedright``Extending the length can significantly decrease Maintainability Index, even if all of the changes cause the code to be clearer and more understandable.'' --- Tim Gilboy}}
 
-\pitch{\pptQuote{hericko.png}{When comparing maintainability measurements from several Index variants, the perception of maintainability could be impacted by the choice of the Index variant used.}{Tja\u{s}a Heri\u{c}ko et al., \textit{Exploring Maintainability Index Variants for Software Maintainability Measurement in Object-Oriented Systems}, Applied Sciences, 2023}}
+\qte
+  [Tja\u{s}a Heri\u{c}ko et al.]
+  {hericko.png}
+  {When comparing maintainability measurements from several Index variants, the perception of maintainability could be impacted by the choice of the Index variant used.}
+  {hericko2023}
 
 \pitch{Maintainability Index is supported by a few tools:
 \begin{itemize}
@@ -114,8 +146,11 @@
 \item \href{https://github.com/yagipy/maintidx}{maintidx} for Go
 \end{itemize}}
 
-\pitch{\pptQuote{slr.png}{The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}{\textit{A Tool-Based Perspective on Software Code Maintainability
-Metrics: A Systematic Literature Review}, Luca Ardito et al., Scientific Programming, 2020}}
+\qte
+  [Luca Ardito et al.]
+  {slr.png}
+  {The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}
+  {ardito2022}
 
 \pitch{\pptBanner{Milestones of Your Research}
 \begin{multicols}{2}
