--- a/main.bib
+++ b/main.bib
@@ -1157,3 +1157,66 @@
   pages={217--238},
   year={1979}
 }
+
+@book{brooks1982,
+  title={{The Mythical Man-Month: Essays on Software Engineering}},
+  author={Brooks, Fred},
+  year={1982},
+  publisher={Addison-Wesley Publishing Company}
+}
+
+@inproceedings{cunningham1992,
+  title={{Experience Report --- The WyCash portfolio management system}},
+  author={Cunningham, Ward},
+  booktitle={Conference on Object-Oriented Programming, Systems, Languages, and Applications (OOPSLA)},
+  pages={29--30},
+  year={1992}
+}
+
+@article{coleman1994,
+  title={{Using Metrics to Evaluate Software System Maintainability}},
+  author={Coleman, Don and Ash, Dan and Lowther, Bruce and Oman, Paul},
+  journal={Computer},
+  year={1994},
+  publisher={IEEE},
+  doi={10.1109/2.303623}
+}
+
+@misc{niedermayr2016,
+  title={{Why we don’t use the Software Maintainability Index}},
+  author={Niedermayr, Rainer},
+  year={2016},
+  url={https://teamscale.com/blog/en/news/blog/maintainability-index}
+}
+
+@misc{deursen2014,
+  title={{Think Twice Before Using the ``Maintainability Index''}},
+  author={van Deursen, Arie},
+  year={2014},
+  url={https://avandeursen.com/2014/08/29/think-twice-before-using-the-maintainability-index/}
+}
+
+@misc{gilboy2022,
+  title={{Maintainability Index - What is it and where does it fall short?}},
+  author={Gilboy, Tim},
+  year={2022},
+  url={https://sourcery.ai/blog/maintainability-index/}
+}
+
+@article{hericko2023,
+  title={{Exploring Maintainability Index Variants for Software Maintainability Measurement in Object-Oriented Systems}},
+  author={Heri{\v{c}}ko, Tja{\v{s}}a},
+  journal={Applied Sciences},
+  year={2023},
+  publisher={MDPI AG},
+  doi={10.3390/app13052972}
+}
+
+@article{ardito2020,
+  title={{A Tool-Based Perspective on Software Code Maintainability Metrics: A Systematic Literature Review}},
+  author={Luca Ardito et al.},
+  journal={Scientific Programming},
+  year={2020},
+  publisher={Hindawi Limited},
+  doi={10.1155/2020/8840389}
+}
