--- a/main.bib
+++ b/main.bib
@@ -1220,3 +1220,37 @@
   publisher={Hindawi Limited},
   doi={10.1155/2020/8840389}
 }
+
+@article{bansiya2002,
+  title={{A hierarchical model for object-oriented design quality assessment}},
+  author={Bansiya,  J. and Davis,  C.G.},
+  journal={IEEE Transactions on Software Engineering},
+  year={2002},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/32.979986}
+}
+
+@article{fowler2001,
+  title={{Reducing coupling}},
+  author={Fowler,  M.},
+  journal={IEEE Software},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  year={2001},
+  doi={10.1109/ms.2001.936226}
+}
+
+@inproceedings{mubarak2010,
+  title={{An evolutionary study of fan-in and fan-out metrics in OSS}},
+  author={Mubarak,  A. and Counsell,  S. and Hierons,  R.M.},
+  booktitle={2010 Fourth International Conference on Research Challenges in Information Science (RCIS)},
+  url={http://dx.doi.org/10.1109/RCIS.2010.5507329},
+  publisher={IEEE},
+  year={2010}
+}
+
+@misc{comartin2021,
+  title={{Write Stable Code using Coupling Metrics}},
+  author={Comartin, Derek},
+  year={2021},
+  url={https://codeopinion.com/write-stable-code-using-coupling-metrics/}
+}
