--- a/07-LCOM/07-LCOM.tex
+++ b/07-LCOM/07-LCOM.tex
@@ -37,7 +37,13 @@
 \pptPic{.8}{cohesion-1.png}\par
 {\scriptsize Source: \url{https://bootcamp.uxdesign.cc/why-product-development-and-design-needs-cohesion-coupling-87731c84aaa7}\par}}
 
-\pitch{\pptQuote{neal-ford.jpg}{Architecture is the tension between coupling and cohesion.}{\href{https://nealford.com/}{Neal Ford}, ThoughtWorks}}
+% \pitch{\pptQuote{neal-ford.jpg}{Architecture is the tension between coupling and cohesion.}{\href{https://nealford.com/}{Neal Ford}, ThoughtWorks}}
+
+\qte
+  [Neal Ford]
+  {neal-ford.jpg}
+  {Architecture is the tension between coupling and cohesion.}
+  {ford_architecture}
 
 \qte
   [Glenford J. Myers]
