--- a/main.bib
+++ b/main.bib
@@ -1254,3 +1254,9 @@
   year={2021},
   url={https://codeopinion.com/write-stable-code-using-coupling-metrics/}
 }
+
+@misc{ford_architecture,
+  title={{Architecture is the tension between coupling and cohesion}},
+  author={Ford, Neal},
+  url={https://nealford.com/},
+}
