--- a/main.bib
+++ b/main.bib
@@ -1260,3 +1260,10 @@
   author={Ford, Neal},
   url={https://nealford.com/},
 }
+
+@book{yourdon1979structured,
+  title={{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}},
+  author={Yourdon, Edward and Constantine, Larry},
+  year={1979},
+  publisher={Prentice Hall}
+}
