--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -27,7 +27,11 @@
 
 \plush{\sqmTitlePage{8}{JOKxjpAglFU}}
 
-\pitch{\pptQuote{edward-yourdon.jpg}{Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}{\ul{Edward Yourdon} and Larry Constantine, \textit{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design}, Prentice Hall, 1979}}
+\qte
+  [\ul{Edward Yourdon} and Larry Constantine]
+  {edward-yourdon.jpg}
+  {Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}
+  {yourdon1979structured}
 
 \qte
   [James M. Bieman]
