--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -91,7 +91,11 @@ void main(Shape s)
 \includegraphics[width=.9\columnwidth]{nhd-3.png}\par
 \end{pptWide}}
 
-\pitch{\pptBanner{Interface Segregation Principle}\pptQuote{robert-martin.jpg}{Classes that have 'fat' interfaces are classes whose interfaces are not \ul{cohesive}. In other words, the interfaces of the class can be broken up into groups of methods.}{\textit{Agile Software Development, Principles, Patterns, and Practices},  Robert C. Martin, 2002}}
+\qte
+  [Robert C. Martin]
+  {robert-martin.jpg}
+  {Classes that have 'fat' interfaces are classes whose interfaces are not \ul{cohesive}. In other words, the interfaces of the class can be broken up into groups of methods.}
+  {martin2002}
 
 \pptBanner{InputStream in Java}
 \begin{pptWide}{2}
