--- a/main.bib
+++ b/main.bib
@@ -1267,3 +1267,10 @@
   year={1979},
   publisher={Prentice Hall}
 }
+
+@book{martin2002,
+  title={{Agile Software Development, Principles, Patterns, and Practices}},
+  author={Martin, Robert C.},
+  year={2002},
+  publisher={ACM Digital Library}
+}
