--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -29,11 +29,23 @@
 
 \plush{\sqmTitlePage{11}{ynPTEzDTutc}}
 
-\pitch{\pptQuote{../09-CAMC-and-NHD/robert-martin.jpg}{Duplication is the \ul{primary enemy} of a well-designed system.}{\textit{Clean Code: A Handbook of Agile Software Craftsmanship}, Robert C. Martin, Pearson, 2008}}
+\qte
+  [Robert C. Martin]
+  {../09-CAMC-and-NHD/robert-martin.jpg}
+  {Duplication is the \ul{primary enemy} of a well-designed system.}
+  {martin2008clean}
 
-\pitch{\pptQuote{qurat-ul-ain.jpg}{If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}{\textit{A Systematic Review on Code Clone Detection}, \ul{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
+\qte
+  [\ul{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool]
+  {qurat-ul-ain.jpg}
+  {If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}
+  {ain2019}
 
-\pitch{\pptQuote{rainer-koschke.jpg}{The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \ul{multiple times}, too. Yet, it is usually not documented \ul{where} code was copied.}{\textit{Comparison and Evaluation of Clone Detection Tools}, Stefan Bellon, \ul{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo, IEEE Transactions on Software Engineering, 2007}}
+\qte
+  [Stefan Bellon, \ul{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo]
+  {rainer-koschke.jpg}
+  {The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \ul{multiple times}, too. Yet, it is usually not documented \ul{where} code was copied.}
+  {bellon2007}
 
 \pptBanner{Motivating Example (part I)}
 \begin{multicols}{2}
@@ -91,7 +103,11 @@ void sayHello(int id) {
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{brenda-baker.jpg}{Two lines of code are considered to be identical if they contain the same \ul{sequence of characters} after removing comments and white space; the \ul{semantics} of the program statements are not analyzed.}{\textit{A Program for Identifying Duplicated Code}, Brenda S. Baker, Computing Science and Statistics, 1993}}
+\qte
+  [Brenda S. Baker]
+  {brenda-baker.jpg}
+  {Two lines of code are considered to be identical if they contain the same \ul{sequence of characters} after removing comments and white space; the \ul{semantics} of the program statements are not analyzed.}
+  {baker1993}
 
 \pptBanner{Up to 38\% of lines are involved in duplicates}
 \begin{multicols}{2}
@@ -118,9 +134,17 @@ duplicated.
   {\textbf{The Rule of Three}: The \ul{first} time you do something, you just do it. The \ul{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \ul{third} time you do something similar, you refactor.}
   {fowler1999refactoring}
 
-\pitch{\pptBanner{Clone Coverage}\pptQuote{yoshiki-higo.jpg}{Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}{\textit{Analysis of the linux kernel evolution using code clone coverage}, Simone Livieri, \ul{Yoshiki Higo}, Makoto Matsushita, Katsuro Inoue, International Workshop on Mining Software Repositories (MSR), 2007}}
+\qte
+  [Simone Livieri, \ul{Yoshiki Higo}, Makoto Matsushita, Katsuro Inoue]
+  {yoshiki-higo.jpg}
+  {Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}
+  {livieri2007}
 
-\pitch{\pptQuote{wasi-haider-butt.jpg}{We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}{\textit{A Systematic Review on Code Clone Detection}, Ain, Qurat Ul, \ul{Wasi Haider Butt}, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool, IEEE Access, 2019}}
+\qte
+  [Ain, Qurat Ul, \ul{Wasi Haider Butt}, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool]
+  {wasi-haider-butt.jpg}
+  {We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}
+  {ain2019}
 
 \pptBanner{Type-1: Exact Clone}
 \begin{multicols}{2}
@@ -216,7 +240,11 @@ More than one code segments that are functionally similar but implemented by dif
   \end{enumerate}
 }
 
-\pitch{\pptQuote{jens-krinke.jpg}{For the three Java systems studied, the following results were found: 1)~cloned code is usually \ul{older} than non-cloned code, 2)~cloned code in a file is usually older than the non-cloned code in the same file. Both results suggest that cloned code is \ul{more stable} than non-cloned code.}{\textit{Is cloned code older than non-cloned code?}, Jens Krinke, Proceedings of the International Workshop on Software Clones, 2011}}
+\qte
+  [Jens Krinke]
+  {jens-krinke.jpg}
+  {For the three Java systems studied, the following results were found: 1)~cloned code is usually \ul{older} than non-cloned code, 2)~cloned code in a file is usually older than the non-cloned code in the same file. Both results suggest that cloned code is \ul{more stable} than non-cloned code.}
+  {krinke2011}
 
 \plush{
   \pptBanner{These tools can help detecting duplicate code:}
