--- a/main.bib
+++ b/main.bib
@@ -1274,3 +1274,45 @@
   year={2002},
   publisher={ACM Digital Library}
 }
+
+@article{ain2019,
+  title={{A Systematic Review on Code Clone Detection}},
+  author={Ain, Qurat Ul and Butt, Wasi Haider and Anwar, Muhammad Waseem and Azam, Farooque and Maqbool, Bilal},
+  journal={IEEE Access},
+  year={2019},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/access.2019.2918202}
+}
+
+@article{bellon2007,
+  title={{Comparison and Evaluation of Clone Detection Tools}},
+  author={Bellon,  Stefan and Koschke,  Rainer and Antoniol,  Giulio and Krinke,  Jens and Merlo,  Ettore},
+  journal={IEEE Transactions on Software Engineering},
+  year={2007},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/tse.2007.70725}
+}
+
+@inproceedings{baker1993,
+  title={{A Program for Identifying Duplicated Code}},
+  author={Baker, Brenda S.},
+  booktitle={Proceedings of the 24th Symposium on the Interface},
+  pages={1--9},
+  year={1993}
+}
+
+@inproceedings{livieri2007,
+  title={{Analysis of the Linux Kernel Evolution Using Code Clone Coverage}},
+  author={Livieri, Simone and Higo, Yoshiki and Matsushita, Makoto and Inoue, Katsuro},
+  booktitle={Fourth International Workshop on Mining Software Repositories (MSR’07:ICSE Workshops 2007)},
+  url = {http://dx.doi.org/10.1109/MSR.2007.1},
+  year={2007}
+}
+
+@inproceedings{krinke2011,
+  title={{Is cloned code older than non-cloned code?}},
+  author={Krinke,  Jens},
+  booktitle={Proceedings of the 5th International Workshop on Software Clones},
+  url = {http://dx.doi.org/10.1145/1985404.1985410},
+  year = {2011}
+}
