--- a/main.bib
+++ b/main.bib
@@ -1305,14 +1305,71 @@
   title={{Analysis of the Linux Kernel Evolution Using Code Clone Coverage}},
   author={Livieri, Simone and Higo, Yoshiki and Matsushita, Makoto and Inoue, Katsuro},
   booktitle={Fourth International Workshop on Mining Software Repositories (MSR’07:ICSE Workshops 2007)},
-  url = {http://dx.doi.org/10.1109/MSR.2007.1},
+  url={http://dx.doi.org/10.1109/MSR.2007.1},
   year={2007}
 }
 
 @inproceedings{krinke2011,
   title={{Is cloned code older than non-cloned code?}},
-  author={Krinke,  Jens},
+  author={Krinke, Jens},
   booktitle={Proceedings of the 5th International Workshop on Software Clones},
-  url = {http://dx.doi.org/10.1145/1985404.1985410},
-  year = {2011}
+  url={http://dx.doi.org/10.1145/1985404.1985410},
+  year={2011}
+}
+
+@article{romano2018,
+  title={{A Multi-Study Investigation into Dead Code}},
+  author={Romano, Simone and Vendome, Christopher and Scanniello, Giuseppe and Poshyvanyk, Denys},
+  journal={IEEE Transactions on Software Engineering},
+  year={2018},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/tse.2018.2842781}
+}
+
+@inproceedings{eder2012,
+  title={{How much does unused code matter for maintenance?}},
+  author={Eder, Sebastian and Junker, Maximilian and Jurgens, Elmar and Hauptmann, Benedikt and Vaas, Rudolf and Prommer, Karl-Heinz},
+  booktitle={2012 34th International Conference on Software Engineering (ICSE)},
+  url={http://dx.doi.org/10.1109/ICSE.2012.6227109},
+  year={2012}
+}
+
+@inproceedings{jaspan2018,
+  title={{Advantages and disadvantages of a monolithic repository: a case study at google}},
+  author={Jaspan, Ciera and Jorde, Matthew and Knight, Andrea and Sadowski, Caitlin and Smith, Edward K. and Winter, Collin and Murphy-Hill, Emerson},
+  booktitle={Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Practice},
+  url={http://dx.doi.org/10.1145/3183519.3183550},
+  year={2018}
+}
+
+@article{potvin2016,
+  title={{Why Google stores billions of lines of code in a single repository}},
+  author={Potvin, Rachel and Levenberg, Josh},
+  journal={Communications of the ACM},
+  year={2016},
+  publisher={Association for Computing Machinery (ACM)},
+  doi={10.1145/2854146}
+}
+
+@misc{goode2014,
+  title={{Scaling Mercurial at Facebook}},
+  author={Durham Goode et al.},
+  year={2014},
+  url={https://engineering.fb.com/2014/01/07/core-infra/scaling-mercurial-at-facebook/}
+}
+
+@misc{votruba2017,
+  title={{How Monolithic Repository in Open Source saved my Laziness}},
+  author={Votruba, Tomas},
+  year={2017},
+  url={https://tomasvotruba.com/blog/2017/01/31/how-monolithic-repository-in-open-source-saved-my-laziness}
+}
+
+@inproceedings{mantyla2003,
+  title={{A taxonomy and an initial empirical study of bad smells in code}},
+  author={Mantyla, M. and Vanhanen, J. and Lassenius, C.},
+  booktitle={International Conference on Software Maintenance,  2003. ICSM 2003. Proceedings.},
+  url={http://dx.doi.org/10.1109/ICSM.2003.1235447},
+  year={2003},
+  doi={10.1109/icsm.2003.1235447}
 }
