--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -40,7 +40,11 @@
   \item Git: 2005
 \end{itemize}}
 
-\pitch{\pptQuote{sebastian-elbaum.jpg}{We can measure the increase or decrease in system complexity as measured by a selected metric, \ul{code delta}, or we can measure the total amount of \ul{change} the system has undergone between builds, \ul{code churn}.}{\textit{Code Churn: A Measure for Estimating the Impact of Code Change}, \ul{Sebastian G. Elbaum} and John C. Munson, Proceedings of the International Conference on Software Maintenance (ICSM), 1998}}
+\qte
+  [\ul{Sebastian G. Elbaum} and John C. Munson]
+  {sebastian-elbaum.jpg}
+  {We can measure the increase or decrease in system complexity as measured by a selected metric, \ul{code delta}, or we can measure the total amount of \ul{change} the system has undergone between builds, \ul{code churn}.}
+  {munson1998}
 
 \pptBanner{Motivating Example}
 \begin{pptWide}{3}
@@ -110,8 +114,11 @@ delta for the system will be close to zero.''
   {We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}
   {farago2015cumulative}
 
-\pitch{\pptQuote{tobias-olsson.jpg}{Non-normal code churn can be a tangible and measurable \ul{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \ul{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}{\textit{The Relationship of Code Churn and Architectural Violations in
-the Open Source Software JabRef}, Tobias Olsson, Morgan Ericsson, Anna Wingkvist, Proceedings of the 11th European Conference on Software Architecture: Companion Proceedings, 2017}}
+\qte
+  [Tobias Olsson, Morgan Ericsson, Anna Wingkvist]
+  {tobias-olsson.jpg}
+  {Non-normal code churn can be a tangible and measurable \ul{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \ul{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}
+  {olsson2017}
 
 \pitch{\pptBanner{CodeClimate.com Interpretation of Code Churn}
 \begin{multicols}{2}
