--- a/main.bib
+++ b/main.bib
@@ -1373,3 +1373,30 @@
   year={2003},
   doi={10.1109/icsm.2003.1235447}
 }
+
+@inproceedings{munson1998,
+  title={{Code churn: a measure for estimating the impact of code change}},
+  author={Munson, J.C. and Elbaum, S.G.},
+  booktitle={Proceedings. International Conference on Software Maintenance (Cat. No. 98CB36272)},
+  url={http://dx.doi.org/10.1109/ICSM.1998.738486},
+  year={1998},
+  doi={10.1109/icsm.1998.738486}
+}
+
+@inproceedings{olsson2017,
+  title={{The relationship of code churn and architectural violations in the open source software JabRef}},
+  author={Olsson, Tobias and Ericsson, Morgan and Wingkvist, Anna},
+  booktitle={Proceedings of the 11th European Conference on Software Architecture: Companion Proceedings},
+  url={http://dx.doi.org/10.1145/3129790.3129810},
+  year={2017},
+  doi={10.1145/3129790.3129810}
+}
+
+@article{bugayenko2023,
+  title={{Automatically Prioritizing Tasks in Software Development}},
+  author={Bugayenko,  Yegor and Farina, Mirko and Kruglov, Artem and Pedrycz, Witold and Plaksin, Yaroslav and Succi, Giancarlo},
+  journal={IEEE Access},
+  year={2023},
+  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  doi={10.1109/access.2023.3305249}
+}
