--- a/main.bib
+++ b/main.bib
@@ -1243,7 +1243,7 @@
   title={{An evolutionary study of fan-in and fan-out metrics in OSS}},
   author={Mubarak,  A. and Counsell,  S. and Hierons,  R.M.},
   booktitle={2010 Fourth International Conference on Research Challenges in Information Science (RCIS)},
-  url={http://dx.doi.org/10.1109/RCIS.2010.5507329},
+  doi={10.1109/RCIS.2010.5507329},
   publisher={IEEE},
   year={2010}
 }
@@ -1272,7 +1272,7 @@
   title={{Agile Software Development, Principles, Patterns, and Practices}},
   author={Martin, Robert C.},
   year={2002},
-  publisher={ACM Digital Library}
+  publisher={ACM}
 }
 
 @article{ain2019,
@@ -1305,7 +1305,7 @@
   title={{Analysis of the Linux Kernel Evolution Using Code Clone Coverage}},
   author={Livieri, Simone and Higo, Yoshiki and Matsushita, Makoto and Inoue, Katsuro},
   booktitle={Fourth International Workshop on Mining Software Repositories (MSR’07:ICSE Workshops 2007)},
-  url={http://dx.doi.org/10.1109/MSR.2007.1},
+  doi={10.1109/MSR.2007.1},
   year={2007}
 }
 
@@ -1313,7 +1313,6 @@
   title={{Is cloned code older than non-cloned code?}},
   author={Krinke, Jens},
   booktitle={Proceedings of the 5th International Workshop on Software Clones},
-  url={http://dx.doi.org/10.1145/1985404.1985410},
   year={2011}
 }
 
@@ -1322,15 +1321,14 @@
   author={Romano, Simone and Vendome, Christopher and Scanniello, Giuseppe and Poshyvanyk, Denys},
   journal={IEEE Transactions on Software Engineering},
   year={2018},
-  publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+  publisher={IEEE},
   doi={10.1109/tse.2018.2842781}
 }
 
 @inproceedings{eder2012,
   title={{How much does unused code matter for maintenance?}},
   author={Eder, Sebastian and Junker, Maximilian and Jurgens, Elmar and Hauptmann, Benedikt and Vaas, Rudolf and Prommer, Karl-Heinz},
-  booktitle={2012 34th International Conference on Software Engineering (ICSE)},
-  url={http://dx.doi.org/10.1109/ICSE.2012.6227109},
+  booktitle={Proceedings of the 34th International Conference on Software Engineering},
   year={2012}
 }
 
@@ -1338,16 +1336,15 @@
   title={{Advantages and disadvantages of a monolithic repository: a case study at google}},
   author={Jaspan, Ciera and Jorde, Matthew and Knight, Andrea and Sadowski, Caitlin and Smith, Edward K. and Winter, Collin and Murphy-Hill, Emerson},
   booktitle={Proceedings of the 40th International Conference on Software Engineering: Software Engineering in Practice},
-  url={http://dx.doi.org/10.1145/3183519.3183550},
   year={2018}
 }
 
 @article{potvin2016,
   title={{Why Google stores billions of lines of code in a single repository}},
   author={Potvin, Rachel and Levenberg, Josh},
-  journal={Communications of the ACM},
+  journal={{Communications of the ACM}},
   year={2016},
-  publisher={Association for Computing Machinery (ACM)},
+  publisher={ACM},
   doi={10.1145/2854146}
 }
 
@@ -1399,4 +1396,16 @@
   year={2023},
   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
   doi={10.1109/access.2023.3305249}
+}
+
+@article{pradel2021neural,
+  title={{Neural Software Analysis}},
+  author={Pradel, Michael and Chandra, Satish},
+  journal={Communications of the ACM},
+  volume={65},
+  number={1},
+  pages={86--96},
+  year={2021},
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/3460348}
 }
