--- a/main.bib
+++ b/main.bib
@@ -806,7 +806,7 @@
   number={6},
   pages={53--61},
   year={1997},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @inproceedings{vasilescu2015quality,
@@ -866,7 +866,7 @@
   number={12},
   pages={57--63},
   year={2011},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @misc{bugayenko2014blog0813,
@@ -913,7 +913,7 @@
   number={1},
   pages={80--88},
   year={1985},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @article{harrison1986note,
@@ -924,7 +924,7 @@
   number={2},
   pages={123--125},
   year={1986},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @article{marca1981some,
@@ -935,7 +935,7 @@
   number={4},
   pages={70--80},
   year={1981},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @article{rees1982automatic,
@@ -946,7 +946,7 @@
   number={10},
   pages={33--42},
   year={1982},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @techreport{collberg1997taxonomy,
@@ -1125,7 +1125,7 @@
   number={2},
   pages={123--149},
   year={2006},
-  publisher={ACM New York, NY, USA},
+  publisher={ACM},
   doi={10.1145/1131421.1131422}
 }
 
@@ -1147,7 +1147,7 @@
   number={SI},
   pages={259--262},
   year={1995},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM}
 }
 
 @inproceedings{curtis1979,
@@ -1406,6 +1406,39 @@
   number={1},
   pages={86--96},
   year={2021},
-  publisher={ACM New York, NY, USA},
+  publisher={ACM},
   doi={10.1145/3460348}
+}
+
+@article{alon2019code2vec,
+  title={{code2vec: Learning Distributed Representations of Code}},
+  author={Alon, Uri and Zilberstein, Meital and Levy, Omer and Yahav, Eran},
+  journal={{Proceedings of the Principles of Programming Languages (POPL)}},
+  year={2019},
+  publisher={ACM},
+  doi={10.1145/3290353}
+}
+
+@misc{taylor2023,
+  author = {Taylor, Chris},
+  title = {{Can open-source LLMs detect bugs in C++ code?}},
+  howpublished = {\url{https://catid.io/posts/llm_bugs/}},
+  year = {2023},
+  note = {[Online; accessed 15-03-2024]}
+}
+
+@article{mohajer2023skipanalyzer,
+  title={{SkipAnalyzer: An Embodied Agent for Code Analysis with Large Language Models}},
+  author={Mohajer, Mohammad Mahdi and Aleithan, Reem and Harzevili, Nima Shiri and Wei, Moshi and Belle, Alvine Boaye and Pham, Hung Viet and Wang, Song},
+  journal={{arXiv}},
+  year={2023},
+  doi={10.48550/arXiv.2310.18532}
+}
+
+@inproceedings{li2023assisting,
+  title={{Assisting Static Analysis with Large Language Models: A ChatGPT Experiment}},
+  author={Li, Haonan and Hao, Yu and Zhai, Yizhuo and Qian, Zhiyun},
+  booktitle={{Proceedings of the 31st Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering}},
+  pages={2107--2111},
+  year={2023}
 }
