--- a/main.bib
+++ b/main.bib
@@ -1440,5 +1440,6 @@
   author={Li, Haonan and Hao, Yu and Zhai, Yizhuo and Qian, Zhiyun},
   booktitle={{Proceedings of the 31st Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering}},
   pages={2107--2111},
-  year={2023}
+  year={2023},
+  doi={10.1145/3611643.3613078}
 }
