--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -221,7 +221,9 @@ int f(int x) {
     \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy}
   \item Rust:
     \href{https://github.com/rust-lang/rust-clippy}{clippy}
-  \end{itemize}}
+  \end{itemize}
+  \par
+  There are many more of them: \newline \url{https://github.com/analysis-tools-dev/static-analysis}}
 
 \plush{\pptBanner{Some Static Analysis Mechanisms}
 \begin{itemize}
