--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -123,9 +123,17 @@ assert foo(50) == 42;
 \end{multicols}
 \plush{}
 
-\pitch{\pptQuote{william-elmendorf.jpg}{A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \ul{variations} eligible for testing; 3) rank and subset the \ul{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \ul{test coverage} of the test case library; and 5) verify attainment of the \ul{planned} test coverage.}{William Robert Elmendorf, \textit{Controlling the Functional Testing of an Operating System}, IEEE Transactions on Systems Science and Cybernetics, 5(4), 1969}}
-
-\pitch{\pptQuote{david-gelperin.jpg}{However, only half regularly document their test designs, only half regularly save their tests for reuse after software changes, and an extremely small five percent provide regular \ul{measurements} of code coverage.}{\textit{The Growth of Software Testing}, \ul{David Gelperin} and Bill Hetzel, Communications of the ACM, 31(6), 1988}}
+\qte
+  [William Robert Elmendorf]
+  {william-elmendorf.jpg}
+  {A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \ul{variations} eligible for testing; 3) rank and subset the \ul{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \ul{test coverage} of the test case library; and 5) verify attainment of the \ul{planned} test coverage.}
+  {elmendorf1969}
+  
+\qte
+  [\ul{David Gelperin} and Bill Hetzel]
+  {david-gelperin.jpg}
+  {However, only half regularly document their test designs, only half regularly save their tests for reuse after software changes, and an extremely small five percent provide regular \ul{measurements} of code coverage.}
+  {gelperin1988}
 
 \plush{
 \begin{multicols}{2}
@@ -141,17 +149,42 @@ measurements of code coverage}.''\par
 \end{multicols}
 }
 
-\pitch{\pptQuote{boris-beizer.jpg}{Junky software takes more tests to achieve coverage, but it breaks under any systematic test.}{\textit{Black Box Testing}, Boris Beizer, 1995}}
+\qte
+  [Boris Beizer]
+  {boris-beizer.jpg}
+  {Junky software takes more tests to achieve coverage, but it breaks under any systematic test.}
+  {beizer1995}
 
-\pitch{\pptQuote{brian-marick.jpg}{Coverage numbers (like many numbers) are dangerous because they're \ul{objective} but \ul{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}{Brian Marick, \href{http://www.exampler.com/testing-com/writings/coverage.pdf}{\textit{How to Misuse Code Coverage}}, 1997}}
+\qte
+  [Brian Marick]
+  {brian-marick.jpg}
+  {Coverage numbers (like many numbers) are dangerous because they're \ul{objective} but \ul{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}
+  {marick1997}
 
-\pitch{\pptQuote{../06-coupling/martin-fowler.jpg}{I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \ul{numbers happy}, but not thinking about what they are doing.}{Martin Fowler, \href{https://martinfowler.com/bliki/TestCoverage.html}{\textit{Test Coverage}}, 1997}}
+\qte
+  [Martin Fowler]
+  {../06-coupling/martin-fowler.jpg}
+  {I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \ul{numbers happy}, but not thinking about what they are doing.}
+  {fowler1997}
 
-\pitch{\pptQuote{cem-kaner.jpg}{As you get near 100 percent line coverage, that doesn't tell you the product is near release. It just tells you that the product is no longer \ul{obviously far} from release according to \ul{this measure}.}{\ul{Cem Kaner}, James Bach, Bret Pettichord, \textit{Lessons Learned in Software Testing: A Context-Driven Approach}, 2002}}
+\qte
+  [\ul{Cem Kaner}, James Bach, Bret Pettichord]
+  {cem-kaner.jpg}
+  {As you get near 100 percent line coverage, that doesn't tell you the product is near release. It just tells you that the product is no longer \ul{obviously far} from release according to \ul{this measure}.}
+  {kaner2002}
 
-\pitch{\pptQuote{pavneet-singh-kochhar.jpg}{Our results show that coverage has an \ul{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and \ul{no such correlation} at the file level.}{\textit{Code Coverage and Postrelease Defects: A Large-Scale Study on Open Source Projects}, Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan, IEEE Transactions on Reliability, 66(4), 2017}}
+\qte
+  [Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan]
+  {pavneet-singh-kochhar.jpg}
+  {Our results show that coverage has an \ul{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and \ul{no such correlation} at the file level.}
+  {kochhar2017}
 
-\pitch{\pptQuote{goran-petrovic.jpg}{Google \ul{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \ul{five levels} of code coverage thresholds.}{\textit{Code Coverage at Google}, \ul{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser, Proceedings of the 27th Joint Meeting on ESEC/FSE, 2019}}
+\qte
+  [\ul{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser]
+  {goran-petrovic.jpg}
+  {Google \ul{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \ul{five levels} of code coverage thresholds.}
+  {ivankovi2019}
+
 
 \pitch{\pptBanner{Code Coverage Threshold Levels in Google}\includegraphics[width=.7\textwidth]{levels.png}}
 
